swag readme
